--- a/_config.yml
+++ b/_config.yml
@@ -6,21 +6,21 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yummy Theme # ex. I m Chuan
-name: Your Name # ex. DONGChuan
-email: my_email_address@lalala.com
-location: My location # ex. Nice, France
-company: MyCompany
-company_url: my_company_website
-github_url: my_github_url # ex. https://github.com/DONGChuan
-description: description_of_your_web_site
+title: 黄元庆的学习博客 # ex. I m Chuan
+name: Yuanqing Huang # ex. DONGChuan
+email: 971434126@qq.com
+location: Lovely,China # ex. Nice, France
+company: BIUBIUBIU~~~
+company_url: BIUBIUBIU~~~
+github_url: https://yuanqingh.github.io # ex. https://github.com/DONGChuan
+description: 学习日记
 favicon: favicon.png # Image must be in assets/images
-repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.github.io
+repository: yuanqingh/yuanqingh.github.io # ex. DONGChuan/DONGChuan.github.io
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
-url: http://localhost:4000
+url: https://yuanqingh.github.io
 
 ## Gem
 gems:
